--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wardrobe-client",
+	"name": "react-vite-tailwind-template",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
